// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotLoaderOverlay animationType prop sets the correct dot animation 1`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-0 {
  background-color: white;
  border-radius: 50%;
  -webkit-animation-name: dot-grow-animation;
  animation-name: dot-grow-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.emotion-0:last-child {
  margin-right: 0 !important;
}

<div>
  <div
    class="test-class emotion-3"
  >
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 210.00000000000003ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 420.00000000000006ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 630.0000000000001ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
  </div>
</div>
`;

exports[`DotLoaderOverlay animationType prop sets the correct dot animation 2`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-0 {
  background-color: white;
  border-radius: 50%;
  -webkit-animation-name: dot-bounce-animation;
  animation-name: dot-bounce-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0:last-child {
  margin-right: 0 !important;
}

<div>
  <div
    class="test-class emotion-3"
  >
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 210.00000000000003ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 420.00000000000006ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 630.0000000000001ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
  </div>
</div>
`;

exports[`DotLoaderOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 1`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-0 {
  background-color: white;
  border-radius: 50%;
  -webkit-animation-name: dot-grow-animation;
  animation-name: dot-grow-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.emotion-0:last-child {
  margin-right: 0 !important;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 210.00000000000003ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 420.00000000000006ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 630.0000000000001ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
  </div>
</div>
`;

exports[`DotLoaderOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 2`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`DotLoaderOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 3`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-0 {
  background-color: white;
  border-radius: 50%;
  -webkit-animation-name: dot-grow-animation;
  animation-name: dot-grow-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.emotion-0:last-child {
  margin-right: 0 !important;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 210.00000000000003ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 420.00000000000006ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 630.0000000000001ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
  </div>
</div>
`;

exports[`DotLoaderOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 4`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: white;
  border-radius: 50%;
  -webkit-animation-name: dot-grow-animation;
  animation-name: dot-grow-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.emotion-0:last-child {
  margin-right: 0 !important;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 210.00000000000003ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 420.00000000000006ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
    <div
      class="emotion-0"
      style="animation-duration: 1500ms; animation-delay: 630.0000000000001ms; width: 18px; height: 18px; margin-right: 13.5px;"
    />
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay animationDuration prop sets duration on animations correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 300ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 450ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldAnimateStroke prop applies animation to circle element correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldAnimateStroke prop applies animation to circle element correctly 2`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 1`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldShowDarkenedBackground prop adds darkened background to overlay correctly 2`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldShowSemiTransparentRing prop makes a second circle render 1`] = `
.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-1 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <div
    class="emotion-2"
  >
    <svg
      class="emotion-1"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;

exports[`LoadingSpinnerOverlay shouldShowSemiTransparentRing prop makes a second circle render 2`] = `
.emotion-3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.7);
}

.emotion-2 {
  -webkit-animation-name: spinner-rotate-animation;
  animation-name: spinner-rotate-animation;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-0 {
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 57;
  stroke-linecap: round;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dashoffset: 18;
  z-index: 1;
  -webkit-animation-name: spinner-stroke-animation;
  animation-name: spinner-stroke-animation;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.emotion-1 {
  fill: transparent;
  stroke-width: 2px;
  opacity: 0.2;
  z-index: 0;
}

<div>
  <div
    class="emotion-3"
  >
    <svg
      class="emotion-2"
      height="60"
      style="animation-duration: 1000ms;"
      viewBox="0 0 24 24"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="emotion-0"
        cx="12"
        cy="12"
        r="10"
        style="animation-duration: 1500ms; stroke: #ffffff;"
      />
      <circle
        class="emotion-1"
        cx="12"
        cy="12"
        r="10"
        style="stroke: #ffffff;"
      />
    </svg>
  </div>
</div>
`;
